# rust-ratatui-template

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  terminal-games.json
.cargo/: config.toml
src/: main.rs
